--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.0",
+    "firebase-admin": "^11.8.0",
     "framer-motion": "6",
     "newt-client-js": "^3.2.4",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
